--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
           <a class="nav-link page-scroll" href="#contact">CONTACT</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link page-scroll" href="images/MichelleMcConville.pdf">RESUME</a>
+          <a class="nav-link page-scroll" href="images/MichelleMcConville.pdf" target="_blank">RESUME</a>
         </li>
       </ul>
 
