--- a/index.html
+++ b/index.html
@@ -697,8 +697,7 @@
           <h2>Want to get in touch with me</h2>
           <ul class="list-unstyled li-space-lg">
             <li class="address"><i class="fa fa-map-marker-alt"></i>Kansas City Metro Area, USA</li>
-            <li><i class="fa fa-phone"></i><a href="tel:18163223389">816-322-3389</a></li>
-            <li><i class="fa fa-mobile"></i><a href="tel:18168856066">816-885-6066</a></li>
+            <li><i class="fa fa-phone"></i><a href="tel:18163223389">816-322-3389</a></li><br>
             <li><i class="fa fa-envelope"></i><a href="mailto:office@aria.com">mchelmconvl@gmail.com</a></li>
           </ul>
 
