added border to card image

--- a/index.html
+++ b/index.html
@@ -405,7 +405,7 @@
       <button title="Close (Esc)" type="button" class="mfp-close x-button">×</button>
 
       <div class="col-lg-8">
-        <img class="img-fluid" src="images/project-2.jpg" alt="alternative">
+        <img class="img-fluid" src="images/project-2.jpg" alt="alternative" style="border: solid 2px">
       </div> <!-- end of col -->
 
       <div class="col-lg-4">
@@ -435,7 +435,7 @@
       <button title="Close (Esc)" type="button" class="mfp-close x-button">×</button>
 
       <div class="col-lg-8">
-        <img class="img-fluid" src="images/project-1.jpg" alt="alternative">
+        <img class="img-fluid" src="images/project-1.jpg" alt="alternative" style="border: solid 2px">
       </div> <!-- end of col -->
 
       <div class="col-lg-4">
@@ -464,7 +464,7 @@
       <button title="Close (Esc)" type="button" class="mfp-close x-button">×</button>
 
       <div class="col-lg-8">
-        <img class="img-fluid" src="images/homework-13.jpg" alt="alternative">
+        <img class="img-fluid" src="images/homework-13.jpg" alt="alternative" style="border: solid 2px">
       </div> <!-- end of col -->
 
       <div class="col-lg-4">
@@ -487,7 +487,7 @@
       <button title="Close (Esc)" type="button" class="mfp-close x-button">×</button>
 
       <div class="col-lg-8">
-        <img class="img-fluid" src="images/homework-12.jpg" alt="alternative">
+        <img class="img-fluid" src="images/homework-12.jpg" alt="alternative" style="border: solid 2px">
       </div> <!-- end of col -->
 
       <div class="col-lg-4">
@@ -554,7 +554,7 @@
       <button title="Close (Esc)" type="button" class="mfp-close x-button">×</button>
 
       <div class="col-lg-8">
-        <img class="img-fluid" src="images/homework-09.jpg" alt="alternative">
+        <img class="img-fluid" src="images/homework-09.jpg" alt="alternative" style="border: solid 2px">
       </div> <!-- end of col -->
 
       <div class="col-lg-4">
@@ -668,7 +668,7 @@
       <button title="Close (Esc)" type="button" class="mfp-close x-button">×</button>
 
       <div class="col-lg-8">
-        <img class="img-fluid" src="images/homework-00.jpg" alt="alternative">
+        <img class="img-fluid" src="images/homework-00.jpg" alt="alternative" style="border: solid 2px">
       </div> <!-- end of col -->
 
       <div class="col-lg-4">
