--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
   <!-- SEO Meta Tags -->
-  <meta name="description" content="Michelle McConville Full Stack Portfolio>
-  <meta name="author" content="mchelmconvl">
+  <meta name="description" content="Michelle McConville Full Stack Portfolio" />
+  <meta name="author" content="mchelmconvl" />
   <!-- <meta name="author" content="Inovatik"> -->
 
   <!-- OG Meta Tags to improve the way the post looks when you share the page on LinkedIn, Facebook, Google+ -->
