--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
   <!-- Navbar -->
   <nav class="navbar navbar-expand-md navbar-dark navbar-custom fixed-top">
     <!-- Image Logo -->
-    <a class="navbar-brand logo-image" href="index.html" style="width: 32px;"><img src="images/logo.svg" alt="alternative"></a>
-    <a class="navbar-brand logo-text page-scroll" href="index.html">Michelle McConville</a>   
+    <a class="navbar-brand logo-image" style="width: 32px;"><img src="images/logo.svg" alt="alternative"></a>
+    <a class="navbar-brand logo-text page-scroll">Michelle McConville</a>   
 
   <!-- Mobile Menu Toggle Button -->
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
@@ -116,7 +116,7 @@
     <div class="container">
       <div class="row">
 
-        <div class="col-lg-5">
+        <div class="col-lg-7">
           <div class="text-container">
             <h2>About Me</h2>
             <p style="color: #333;">My name is Michelle McConville, wife and mother of two. I love to cook, create & hang with family!</p>
@@ -126,7 +126,7 @@
           </div> <!-- end of text-container -->
         </div> <!-- end of col -->
 
-        <div class="col-lg-7">
+        <div class="col-lg-5">
           <div class="image-container"><br>
             <img class="img-fluid" src="images/heyMe.png" alt="alternative">
           </div> <!-- end of image-container -->
@@ -703,23 +703,23 @@
 
           <h3>Follow Me On Social Media</h3>
 
-          <span class="fa-stack"><a href="https://www.facebook.com/michelle.l.mcconville"><span class="hexagon"></span>
+          <span class="fa-stack"><a href="https://www.facebook.com/michelle.l.mcconville" target="_blank"><span class="hexagon"></span>
             <i class="fab fa-facebook-f fa-stack-1x"></i></a>
           </span>
 
-          <span class="fa-stack"><a href="https://twitter.com/MchelMconvl"><span class="hexagon"></span>
+          <span class="fa-stack"><a href="https://twitter.com/MchelMconvl" target="_blank"><span class="hexagon"></span>
             <i class="fab fa-twitter fa-stack-1x"></i></a>
           </span>
 
-          <span class="fa-stack"><a href="https://www.pinterest.com/mchelmconvl/_saved/"><span class="hexagon"></span>
+          <span class="fa-stack"><a href="https://www.pinterest.com/mchelmconvl/_saved/" target="_blank"><span class="hexagon"></span>
             <i class="fab fa-pinterest fa-stack-1x"></i></a>
           </span>
 
-          <span class="fa-stack"><a href="https://www.instagram.com/mchelmconvl/"><span class="hexagon"></span>
+          <span class="fa-stack"><a href="https://www.instagram.com/mchelmconvl/" target="_blank"><span class="hexagon"></span>
             <i class="fab fa-instagram fa-stack-1x"></i></a>
           </span>
 
-          <span class="fa-stack"><a href="#https://www.linkedin.com/in/mchelmcconvillekc/"><span class="hexagon"></span>
+          <span class="fa-stack"><a href="https://www.linkedin.com/in/mchelmcconvillekc/" target="_blank"><span class="hexagon"></span>
             <i class="fab fa-linkedin-in fa-stack-1x"></i></a>
           </span>
 
